--- a/src/main/resources/pokemonMenu.fxml
+++ b/src/main/resources/pokemonMenu.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.MenuController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.MenuController">
    <children>
       <ImageView fx:id="bird" fitHeight="600.0" fitWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@Images/background.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="btnStart" layoutX="450.0" layoutY="300.0" mnemonicParsing="false" onMouseClicked="#showArena" text="Start" textAlignment="CENTER" textFill="#141414">
+      <Button fx:id="btnStart" layoutX="458.0" layoutY="302.0" mnemonicParsing="false" onMouseClicked="#showArena" text="Start" textAlignment="CENTER" textFill="#141414">
          <font>
             <Font size="30.0" />
          </font>
@@ -66,7 +66,7 @@
             <Image url="@Images/bird.png" />
          </image>
       </ImageView>
-      <Button fx:id="closeBtn" cancelButton="true" layoutX="451.0" layoutY="379.0" mnemonicParsing="false" prefHeight="56.0" onAction="#handleCloseButtonAction" prefWidth="114.0" text="Quit" textFill="#0a0a0a">
+      <Button fx:id="closeBtn" cancelButton="true" layoutX="452.0" layoutY="377.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="56.0" prefWidth="114.0" text="Quit" textFill="#0a0a0a">
          <font>
             <Font size="30.0" />
          </font>
