--- a/src/main/resources/ballArena2.fxml
+++ b/src/main/resources/ballArena2.fxml
@@ -4,22 +4,21 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane fx:id="pane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.BallArenaController">
+<AnchorPane fx:id="pane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.BallArenaController">
    <children>
       <ImageView fx:id="background" fitHeight="606.0" fitWidth="1000.0" layoutX="-1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/forestBackGround.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="ballAlly" fitHeight="80.0" fitWidth="100.0" layoutX="320.0" layoutY="322.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="ballEnemy" fitHeight="80.0" fitWidth="100.0" layoutX="598.0" layoutY="202.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/pokemon_ball.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="ballEnemy" fitHeight="80.0" fitWidth="100.0" layoutX="598.0" layoutY="202.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="226.0" layoutY="300.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Images/pokemon_ball.png" />
+            <Image url="remainingPokeCreatureImageView" />
          </image>
       </ImageView>
    </children>
