--- a/src/main/resources/lightArena2.fxml
+++ b/src/main/resources/lightArena2.fxml
@@ -4,17 +4,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane fx:id="pane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.lightArenaController">
+<AnchorPane fx:id="pane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.lightArenaController">
    <children>
       <ImageView fx:id="background" fitHeight="600.0" fitWidth="1000.0" layoutX="-1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/forestBackGround.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="lightAlly" fitHeight="80.0" fitWidth="100.0" layoutX="338.0" layoutY="300.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@Images/light.jpeg" />
          </image>
       </ImageView>
       <ImageView fx:id="lightEnemy" fitHeight="80.0" fitWidth="100.0" layoutX="588.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
@@ -22,5 +16,6 @@
             <Image url="@Images/light.jpeg" />
          </image>
       </ImageView>
+      <ImageView fx:id="remainingPokeCreatureImageView" fitHeight="150.0" fitWidth="200.0" layoutX="208.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
