--- a/src/main/resources/ballArena1.fxml
+++ b/src/main/resources/ballArena1.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="pane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.BallArenaController">
+<AnchorPane fx:id="pane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.BallArena1Controller">
    <children>
       <ImageView fx:id="background" fitHeight="606.0" fitWidth="1000.0" layoutX="-1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -16,10 +16,6 @@
             <Image url="@Images/pokemon_ball.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="556.0" layoutY="172.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="remainingPokeCreatureImageView" />
-         </image>
-      </ImageView>
+      <ImageView fx:id="pokeCreatureRemainingImageView" fitHeight="150.0" fitWidth="200.0" layoutX="556.0" layoutY="172.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
