--- a/src/main/resources/pokemonArena.fxml
+++ b/src/main/resources/pokemonArena.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -62,5 +63,6 @@
          <padding>
             <Insets left="5.0" right="5.0" />
          </padding></TextField>
+      <TextArea fx:id="battleTextLog" editable="false" layoutX="462.0" layoutY="328.0" prefHeight="139.0" prefWidth="298.0" />
     </children>
 </AnchorPane>
