--- a/src/main/resources/pokemonArena.fxml
+++ b/src/main/resources/pokemonArena.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -64,9 +63,6 @@
             <padding>
                 <Insets left="5.0" right="5.0" />
             </padding></TextField>
-        <TextArea fx:id="battleTextLog" editable="false" layoutX="500.0" layoutY="330.0" opacity="0.4" prefHeight="100.0" prefWidth="250.0" style="-fx-border-color: Black; -fx-background-color: Black;">
-         <effect>
-            <Shadow />
-         </effect></TextArea>
+        <TextArea fx:id="battleTextLog" editable="false" layoutX="500.0" layoutY="330.0" prefHeight="110.0" prefWidth="250.0" style="-fx-border-color: Black; -fx-background-color: Black;" />
     </children>
 </AnchorPane>
