--- a/src/main/resources/loserScreen.fxml
+++ b/src/main/resources/loserScreen.fxml
@@ -24,7 +24,7 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <Button fx:id="startBtn" layoutX="256.0" layoutY="193.0" mnemonicParsing="false" text="New Game" textFill="#e10606" />
+      <Button fx:id="startBtn" layoutX="256.0" layoutY="193.0" mnemonicParsing="false" onMouseClicked="#returnHome" text="New Game" textFill="#e10606" />
       <Button fx:id="closeBtn" cancelButton="true" layoutX="255.0" layoutY="229.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="24.0" prefWidth="90.0" text="Quit" textFill="#770beb" />
       <ImageView fx:id="sadPikachu" fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="197.0" pickOnBounds="true" preserveRatio="true">
          <image>
