--- a/src/main/resources/winnerScreen.fxml
+++ b/src/main/resources/winnerScreen.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="564.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.WinnerController">
+<AnchorPane prefHeight="564.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.WinnerController">
    <children>
       <ImageView fx:id="background" fitHeight="600.0" fitWidth="1000.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
@@ -58,7 +58,7 @@
             <Font name="Caladea" size="21.0" />
          </font>
       </Button>
-      <Button fx:id="homeBtn" layoutX="595.0" layoutY="471.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="131.0" text="Return to home" textFill="#08c4e1">
+      <Button fx:id="homeBtn" layoutX="595.0" layoutY="471.0" mnemonicParsing="false" onMouseClicked="#returnHome" prefHeight="49.0" prefWidth="131.0" text="Return to home" textFill="#08c4e1">
          <font>
             <Font size="12.0" />
          </font>
