--- a/src/main/resources/pokemonMenu.fxml
+++ b/src/main/resources/pokemonMenu.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,8 +21,11 @@
          <font>
             <Font size="30.0" />
          </font>
+         <effect>
+            <DropShadow />
+         </effect>
       </Button>
-      <Label fx:id="title" alignment="CENTER" layoutX="329.0" layoutY="62.0" text="Pokémon" textAlignment="CENTER" textFill="#d9440d" textOverrun="LEADING_WORD_ELLIPSIS">
+      <Label fx:id="title" alignment="CENTER" layoutX="377.0" layoutY="60.0" text="Pokémon" textAlignment="CENTER" textFill="#d9440d" textOverrun="LEADING_WORD_ELLIPSIS">
          <font>
             <Font name="DejaVu Sans Bold" size="67.0" />
          </font>
@@ -34,7 +38,7 @@
          <font>
             <Font name="Z003-MediumItalic" size="13.0" />
          </font></Text>
-      <Text fx:id="version" fill="#161617" layoutX="397.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gale of Darkness" textAlignment="CENTER" wrappingWidth="224.07763671875">
+      <Text fx:id="version" fill="#161617" layoutX="397.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gale of Darkness" textAlignment="CENTER" wrappingWidth="224.07763671875">
          <font>
             <Font name="Carlito" size="23.0" />
          </font>
@@ -73,6 +77,9 @@
          <font>
             <Font size="30.0" />
          </font>
+         <effect>
+            <DropShadow />
+         </effect>
       </Button>
    </children>
 </AnchorPane>
