--- a/src/main/resources/winnerScreen.fxml
+++ b/src/main/resources/winnerScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,14 +11,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.WinnerController">
+<AnchorPane prefHeight="543.0" prefWidth="1019.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.Fearsome_Foursome.Application.Controllers.WinnerController">
    <children>
-      <ImageView fx:id="background" fitHeight="600.0" fitWidth="1000.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fx:id="background" fitHeight="573.0" fitWidth="1037.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-23.0" AnchorPane.topAnchor="0.0">
          <image>
-            <Image url="@Images/background.jpg" />
+            <Image url="@Images/Ash_Ketchum_World_Champion.jpg" />
          </image>
       </ImageView>
-      <Text fx:id="title" fill="#ee1f08bd" layoutY="113.0" strokeLineCap="BUTT" strokeLineJoin="ROUND" strokeType="OUTSIDE" strokeWidth="0.0" text="Congratulations on becoming Pokémon League Champion! " wrappingWidth="1000.0" AnchorPane.bottomAnchor="400.0" AnchorPane.topAnchor="0.0">
+      <Text fx:id="title" fill="#171717bd" layoutX="14.0" layoutY="57.0" strokeLineCap="BUTT" strokeLineJoin="ROUND" strokeType="OUTSIDE" strokeWidth="10.0" text="Congratulations on becoming Pokémon League Champion! " wrappingWidth="1000.0" AnchorPane.bottomAnchor="456.0" AnchorPane.topAnchor="0.0">
          <font>
             <Font name="DejaVu Sans Bold" size="59.0" />
          </font>
@@ -38,30 +39,31 @@
             </RadialGradient>
          </stroke>
       </Text>
-      <ImageView fx:id="ash" fitHeight="244.0" fitWidth="391.0" layoutX="305.0" layoutY="207.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@Images/Ash_Ketchum_World_Champion.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="charizard" fitHeight="150.0" fitWidth="200.0" layoutX="60.0" layoutY="332.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="charizard" fitHeight="150.0" fitWidth="200.0" layoutY="445.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/charizard_mega.png" />
          </image>
       </ImageView>
-      <Text fx:id="win" fill="#f01b0e" layoutX="436.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Winner!!!">
+      <Text fx:id="win" fill="#f01b0e" layoutX="436.0" layoutY="458.0" strokeType="OUTSIDE" strokeWidth="0.0">
          <font>
             <Font name="Caladea" size="27.0" />
          </font>
       </Text>
-      <Button fx:id="closeBtn" cancelButton="true" layoutX="451.0" layoutY="471.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="49.0" prefWidth="81.0" text="Quit" textFill="#0c5fd3">
+      <Button fx:id="closeBtn" cancelButton="true" layoutX="484.0" layoutY="471.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="49.0" prefWidth="81.0" text="Quit" textFill="#111111">
          <font>
             <Font name="Caladea" size="21.0" />
          </font>
+         <effect>
+            <DropShadow />
+         </effect>
       </Button>
-      <Button fx:id="homeBtn" layoutX="595.0" layoutY="471.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="131.0" text="Return to home" textFill="#08c4e1">
+      <Button fx:id="homeBtn" layoutX="595.0" layoutY="471.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="199.0" text="Return to home" textFill="#141414">
          <font>
-            <Font size="12.0" />
+            <Font size="21.0" />
          </font>
+         <effect>
+            <DropShadow />
+         </effect>
       </Button>
    </children>
 </AnchorPane>
