--- a/src/main/resources/pokemonArena.fxml
+++ b/src/main/resources/pokemonArena.fxml
@@ -50,7 +50,7 @@
             </padding></ProgressBar>
       <ImageView fx:id="supportMoveEnemy" fitHeight="359.0" fitWidth="397.0" layoutX="500.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Sprites/Moves/AGILITY.png" />
+            <Image url="@Sprites/AGILITY.png" />
          </image>
       </ImageView>
         <ImageView fx:id="enemySprite" fitHeight="110.0" fitWidth="175.0" layoutX="604.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true" style="-fx-background-size: contain;">
@@ -60,12 +60,12 @@
         </ImageView>
       <ImageView fx:id="attackMoveEnemy" fitHeight="90.0" fitWidth="140.0" layoutX="530.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" rotate="155.0" scaleX="0.75" scaleY="0.75" scaleZ="0.75">
          <image>
-            <Image url="@Sprites/Moves/EMBER.png" />
+            <Image url="@Sprites/EMBER.png" />
          </image>
       </ImageView>
       <ImageView fx:id="attackMovePlayer" fitHeight="90.0" fitWidth="140.0" layoutX="375.0" layoutY="260.0" pickOnBounds="true" preserveRatio="true" rotate="340.0">
          <image>
-            <Image url="@Sprites/Moves/EMBER.png" />
+            <Image url="@Sprites/EMBER.png" />
          </image>
       </ImageView>
         <ImageView fx:id="playerSprite" fitHeight="200.0" fitWidth="200.0" layoutX="265.0" layoutY="205.0" pickOnBounds="true" preserveRatio="true">
@@ -81,7 +81,7 @@
         <TextArea fx:id="battleTextLog" editable="false" layoutX="500.0" layoutY="330.0" prefHeight="85.0" prefWidth="325.0" style="-fx-border-color: Black; -fx-background-color: Black;" />
       <ImageView fx:id="supportMovePlayer" fitHeight="514.0" fitWidth="493.0" layoutX="108.0" layoutY="-32.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Sprites/Moves/RECOVER.png" />
+            <Image url="@Sprites/RECOVER.png" />
          </image>
       </ImageView>
     </children>
