--- a/src/main/resources/pokemonArena.fxml
+++ b/src/main/resources/pokemonArena.fxml
@@ -37,7 +37,7 @@
             <Image url="@Sprites/SURF.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="attackMovePlayer" fitHeight="250.0" fitWidth="250.0" layoutX="370.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" rotate="20.0">
+      <ImageView fx:id="attackMovePlayer" fitHeight="250.0" fitWidth="250.0" layoutX="370.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" rotate="20.0">
          <image>
             <Image url="@Sprites/HYPERBEAM.png" />
          </image>
@@ -49,7 +49,7 @@
       </ImageView>
         <ImageView fx:id="playerSprite" fitHeight="200.0" fitWidth="200.0" layoutX="265.0" layoutY="205.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@Sprites/SceptileAlly.png" />
+                <Image url="@Sprites/StaraptorAlly.png" />
             </image>
         </ImageView>
       <ImageView fx:id="supportMovePlayer" fitHeight="500.0" fitWidth="500.0" layoutX="108.0" layoutY="-32.0" pickOnBounds="true" preserveRatio="true">
