--- a/src/main/resources/pokemonMenu.fxml
+++ b/src/main/resources/pokemonMenu.fxml
@@ -17,14 +17,6 @@
             <Image url="@Images/background.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="btnStart" layoutX="459.0" layoutY="302.0" mnemonicParsing="false" onMouseClicked="#showArena" text="Start" textAlignment="CENTER" textFill="#141414">
-         <font>
-            <Font size="30.0" />
-         </font>
-         <effect>
-            <DropShadow />
-         </effect>
-      </Button>
       <Label fx:id="title" alignment="CENTER" layoutX="377.0" layoutY="60.0" text="Pokémon" textAlignment="CENTER" textFill="#d9440d" textOverrun="LEADING_WORD_ELLIPSIS">
          <font>
             <Font name="DejaVu Sans Bold" size="67.0" />
@@ -34,10 +26,6 @@
          </effect>
       </Label>
       <Text fx:id="author" layoutX="382.0" layoutY="600.0" strokeType="OUTSIDE" strokeWidth="0.0" text="\@2022 CSCI205 Fearsome Foursome" AnchorPane.bottomAnchor="0.0" />
-      <Text fx:id="tm" fill="#e1b507" layoutX="646.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TM">
-         <font>
-            <Font name="Z003-MediumItalic" size="13.0" />
-         </font></Text>
       <Text fx:id="version" fill="#161617" layoutX="397.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gale of Darkness" textAlignment="CENTER" wrappingWidth="224.07763671875">
          <font>
             <Font name="Carlito" size="23.0" />
@@ -73,7 +61,7 @@
             <Image url="@Images/bird.png" />
          </image>
       </ImageView>
-      <Button fx:id="closeBtn" cancelButton="true" layoutX="452.0" layoutY="377.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="56.0" prefWidth="114.0" text="Quit" textFill="#0a0a0a">
+      <Button fx:id="closeBtn" cancelButton="true" layoutX="408.0" layoutY="377.0" mnemonicParsing="false" onAction="#handleCloseButtonAction" prefHeight="57.0" prefWidth="224.0" text="Quit" textFill="#0a0a0a">
          <font>
             <Font size="30.0" />
          </font>
@@ -81,7 +69,15 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button fx:id="btnHardMode" layoutX="790.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#setDifficulty" text="Hard Mode?" textAlignment="CENTER" textFill="#141414" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Button fx:id="btnHardMode" layoutX="408.0" layoutY="302.0" mnemonicParsing="false" onMouseClicked="#setHard" prefHeight="57.0" prefWidth="224.0" text="Hard Mode" textAlignment="CENTER" textFill="#141414" AnchorPane.rightAnchor="368.0" AnchorPane.topAnchor="302.0">
+         <font>
+            <Font size="30.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Button>
+      <Button fx:id="btnNormalMode" layoutX="408.0" layoutY="227.0" mnemonicParsing="false" onMouseClicked="#showArena" prefHeight="57.0" prefWidth="224.0" text="Normal Mode" textAlignment="CENTER" textFill="#141414">
          <font>
             <Font size="30.0" />
          </font>
